add lists, add and remove todo item

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
     <div class="container">
         <h1>ToDo - List</h1>
         <input class="input" type="text"><button class="button">ADD</button>
-        <ul class="list"></ul>
-    </div>
+        <div class="container-list">
+            <div class="container-list-item">
+                <h2>To Do List</h2>
+                <ul class="list"></ul>
+            </div>
+            <div class="container-list-done">
+                <h2>Done List</h2>
+                <ul class="list-done"></ul>
+            </div>
+        </div>
+    </div>    
 
     <script src="js/script.js"></script>
 </body>
