add placeholder in input

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h1>ToDo - List</h1>
-        <input class="input" type="text"><button class="button">ADD</button>
+        <input class="input" type="text" placeholder="Write..."><button class="button">ADD</button>
         <div class="container-list">
             <div class="container-list-item">
                 <h2>To Do List</h2>
